<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/contain_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.367">

        <TextView
            android:id="@+id/game_pointsTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4919FF"
            android:textSize="50sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/barra"
            android:src="@drawable/barra_placar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/game_pointsTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4919FF"
            android:textSize="50sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="25dp"
        android:layout_height="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_1"
        android:onClick="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="back"
        android:text="@string/finalizar"
        android:textColor="#E05606"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_match"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_nameTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#4919FF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/game_nameTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#4919FF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/game_point1"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/bg_btm"
            android:text="@string/_1pts"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/game_point3"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="44dp"
            android:background="@drawable/bg_btm"
            android:text="@string/_3pts"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="@+id/game_point1"
            app:layout_constraintStart_toEndOf="@+id/game_point1"
            app:layout_constraintTop_toTopOf="@+id/game_point1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/game_pointNegative1"
            android:layout_width="62dp"
            android:layout_height="52dp"
            android:layout_marginStart="44dp"
            android:background="@drawable/bg_btm_negative"
            android:text="@string/_negative_1pts"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="@+id/game_point3"
            app:layout_constraintStart_toEndOf="@+id/game_point3"
            app:layout_constraintTop_toTopOf="@+id/game_point3"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/game_pointNegative3"
            android:layout_width="62dp"
            android:layout_height="52dp"
            android:layout_marginStart="44dp"
            android:background="@drawable/bg_btm_negative"
            android:text="@string/_negative_3pts"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="@+id/game_pointNegative1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/game_pointNegative1"
            app:layout_constraintTop_toTopOf="@+id/game_pointNegative1"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>